# Game_Jam_Bot

./: .dockerignore  .env.example  .gitignore  DECISIONS.md  Dockerfile  PROGRESS.md  README.md  REVIEW.md  alembic.ini  docker-compose.yml  pyproject.toml  railway.json  requirements-dev.txt  requirements.txt  restart.bat  restart.ps1  stop.bat  stop.ps1
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/core/: __init__.py  config.py  database.py  i18n.py  instance_lock.py  logging.py  redis.py
app/data/: captcha.py  catalog.py  layers.py
app/handlers/: __init__.py  admin.py  admin_extra.py  fallback.py  membership.py  registration.py
app/keyboards/: admin.py  registration.py
app/middlewares/: __init__.py  auth.py  database.py  language.py  services.py  throttling.py
app/models/: __init__.py  application.py  counter.py  event.py  log.py  user.py
app/repositories/: __init__.py  application.py  base.py  event.py  user.py
app/schemas/: __init__.py  registration.py
app/services/: __init__.py  application.py  (+4 more)
diagnostics/: integrity_check.sql  reproduce_export.py
docs/: PRIVACY.md
migrations/: env.py
tests/: conftest.py  test_admin_service.py  test_audit_fixes.py  test_edit_and_i18n.py  test_event_service.py  test_fallback_and_confirm.py  test_handlers.py  test_handlers_fsm.py  test_i18n_flow.py  test_language_middleware.py  test_legacy_adoption.py  test_migrations.py  test_player_model.py  test_registration_service.py  test_release_hardening.py  test_schemas.py  test_stats.py  test_stats_and_leaderboard.py  test_throttling.py  test_wiring.py
(+8 files in other folders)
